Add entry for "ic_hpc" under "enabled_repositories"

--- a/portal_config.yaml
+++ b/portal_config.yaml
@@ -100,3 +100,5 @@ script_template: |
   {commands}
 custom_config_line_regex: "^#PBS .*"
 status_link: "https://api.rcs.imperial.ac.uk/service-status"
+enabled_repositories:
+  - "ic_hpc"
