Remove .chk file after conversion to .fchk for Gaussian jobs

--- a/portal_config.yaml
+++ b/portal_config.yaml
@@ -54,7 +54,7 @@ software:
       [[ "{fchk}" != "" ]] && unfchk "{fchk}"
       chk_name=$(/apps/ood/portal_config/portal_scripts/prep_gaussian.sh "{com}" "{fchk}")
       g16 "{com}"
-      formchk "$chk_name"
+      formchk "$chk_name" && rm -f "$chk_name"
       /apps/ood/portal_config/portal_scripts/publish_gaussian.sh "{com}" "$chk_name"
     help_text: |
       <p><a href="https://gaussian.com/">Gaussian</a> is an electronic
