Add cluster entry

--- a/portal_config.yaml
+++ b/portal_config.yaml
@@ -104,3 +104,4 @@ enabled_repositories:
 external_links:
   "System Status": "https://api.rcs.imperial.ac.uk/service-status"
   "Extend Jobs": "https://selfservice.rcs.ic.ac.uk/jobs/qstat"
+cluster: "rcs"
