--- a/portal_config.yaml
+++ b/portal_config.yaml
@@ -101,6 +101,7 @@ script_template: |
 custom_config_line_regex: "^(#PBS|export) .*"
 enabled_repositories:
   - "ic_hpc"
+  - "zenodo"
 external_links:
   "System Status": "https://api.rcs.imperial.ac.uk/service-status"
   "Extend Jobs": "https://selfservice.rcs.ic.ac.uk/jobs/qstat"
